Apply OpenRewrite Java8toJava11 migration
- Replace deprecated primitive wrapper constructors with valueOf
- Use maven-compiler-plugin <release>11</release> instead of source/target
- Drop cobertura-maven-plugin reporting (defunct on Java 11+)